Change index file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <h2>Welcome to Arnika Pendar</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, omnis?</p>
+        <p>Lorem ipsum, dolor amet consectetur adipisicing elit. Ipsa, omnis?</p>
     </div>
 </body>
 
