--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="style.css">
 
+
     <title>Document</title>
 </head>
 
@@ -15,5 +16,7 @@
         <h2 class="companiNAme">Arnika Pendar</h2>
     </div>
 </body>
+
+<script src="script.js"></script>
 
 </html>
