change header text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div>
-        <h2 class="companiNAme">Arnika Pendar</h2>
+        <h2 class="companiName">Arnika Pendar</h2>
     </div>
 </body>
 
